tudo 100% só falta arrumar o html :p

--- a/SolucaoApiCorreios/AplicacaoWebCorreios/Utils/resultados_styles.css
+++ b/SolucaoApiCorreios/AplicacaoWebCorreios/Utils/resultados_styles.css
@@ -1,10 +1,9 @@
 ﻿body {
     height: 100vh;
-    background-image: url('img/fundo1.jpeg');
+    background-image: url('img/fundo2.gif');
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 .card {
     background: #ffffffed;
 }
